--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.mustache.prefix=classpath:/templates/
-
 spring.mustache.suffix=.html
+spring.mustache.expose-request-attributes=true
 
 server.port=9000
 
@@ -11,3 +11,7 @@ spring.mvc.static-path-pattern=/**
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 
 pokemonType.service.url=https://trainer-api-ui.herokuapp.com
+
+trainer.service.url=http://localhost:8081
+trainer.service.username=user
+trainer.service.password=bb89a60f-32ec-49a5-bc4b-c377b6d12d47
